feat: add public repository search
