# internal/app/app.go
@@ -82,6 +82,7 @@ func (a *App) Handler() http.Handler {
 	mux.HandleFunc("GET /api/v1/user/deleted-repositories", a.deletedRepositories)
 	mux.HandleFunc("POST /api/v1/user/deleted-repositories/{id}/restore", a.restoreRepository)
 	mux.HandleFunc("GET /api/v1/repos", a.repositories)
+	mux.HandleFunc("GET /api/v1/search/repositories", a.searchRepositories)
 	mux.HandleFunc("POST /api/v1/repos", a.createRepository)
 	mux.HandleFunc("GET /api/v1/repos/{owner}/{repo}", a.repository)
 	mux.HandleFunc("GET /api/v1/repos/{owner}/{repo}/spark", a.spark)
